# cspec

./: Makefile.in  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
examples/spec/: Makefile.am  Makefile.in
inc/: cspec_output_header.h
src/: Makefile.am  Makefile.in  cspec_output_verbose.c
